--- a/practice.html
+++ b/practice.html
@@ -129,45 +129,47 @@
     }
   </style>
 
+
   <script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-    authDomain: "qr-visitor-log.firebaseapp.com",
-    projectId: "qr-visitor-log",
-    storageBucket: "qr-visitor-log.appspot.com",
-    messagingSenderId: "304250341939",
-    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+  authDomain: "qr-visitor-log.firebaseapp.com",
+  projectId: "qr-visitor-log",
+  storageBucket: "qr-visitor-log.appspot.com",
+  messagingSenderId: "304250341939",
+  appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+};
 
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
+firebase.initializeApp(firebaseConfig);
+const db = firebase.firestore();
 
-  // グローバル変数でテーブル状態を保持
-  let tableStatus = {};
+let tableStatus = {};
+let allLogs = []; // 全ログ保存用
 
+// テーブル状態の取得と表示
+db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
+  tableStatus = {};
 
-  db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
-    tableStatus = {};
+  snapshot.forEach(doc => {
+    const data = doc.data();
+    const tableId = data.table;
+    const deviceId = data.device;
+    const timestamp = new Date(data.timestamp);
+    const type = data.type;
 
-    snapshot.forEach(doc => {
-      const data = doc.data();
-      const tableId = data.table;
-      const deviceId = data.device;
-      const timestamp = new Date(data.timestamp);
-      const type = data.type;
+    if (!tableStatus[tableId]) {
+      tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
+    }
 
-      if (!tableStatus[tableId]) {
-        tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
-      }
+    if (type === "enter") {
+      tableStatus[tableId] = { status: "occupied", startTime: timestamp, deviceId };
+    } else if (type === "exit" && tableStatus[tableId].status === "occupied") {
+      tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
+    }
+  });
 
-      if (type === "enter") {
-        tableStatus[tableId] = { status: "occupied", startTime: timestamp, deviceId };
-      } else if (type === "exit" && tableStatus[tableId].status === "occupied") {
-        tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
-      }
-    });
-
-    const tbody = document.querySelector("#tableStatusTable tbody");
+  const tbody = document.querySelector("#tableStatusTable tbody");
+  if (tbody) {
     tbody.innerHTML = "";
 
     for (const [tableId, info] of Object.entries(tableStatus)) {
@@ -187,204 +189,188 @@
       `;
       tbody.appendChild(tr);
     }
-  });
+  }
+});
 
-  // 利用時間を1分ごとに更新
-  function updateUsageTime() {
-    const now = new Date();
-    for (const [tableId, info] of Object.entries(tableStatus)) {
-      if (info.status === "occupied" && info.startTime) {
-        const duration = Math.floor((now - info.startTime) / 60000);
-        const row = document.querySelector(`#tableStatusTable tbody tr[data-table-id="${tableId}"]`);
-        if (row) {
-          row.querySelector(".usage-time").textContent = duration;
-        }
+// 利用時間の定期更新
+function updateUsageTime() {
+  const now = new Date();
+  for (const [tableId, info] of Object.entries(tableStatus)) {
+    if (info.status === "occupied" && info.startTime) {
+      const duration = Math.floor((now - info.startTime) / 60000);
+      const row = document.querySelector(`#tableStatusTable tbody tr[data-table-id="${tableId}"]`);
+      if (row) {
+        row.querySelector(".usage-time").textContent = duration;
       }
     }
   }
-  setInterval(updateUsageTime, 60000);
+}
+setInterval(updateUsageTime, 60000);
 
-  function parseDeviceInfo(ua) {
-    ua = ua.toLowerCase();
-    let device = "不明";
-    let os = "不明";
-    let browser = "不明";
+// デバイス情報解析
+function parseDeviceInfo(ua) {
+  ua = ua.toLowerCase();
+  let device = "不明";
+  let os = "不明";
+  let browser = "不明";
 
-    if (ua.includes("iphone")) {
-      device = guessIphoneModel(ua);
-      os = "iOS";
-    } else if (ua.includes("ipad")) {
-      device = "iPad";
-      os = "iOS";
-    } else if (ua.includes("android")) {
-      device = guessAndroidModel(ua);
-      os = "Android";
-    } else if (ua.includes("windows")) {
-      device = "Windows PC";
-      os = "Windows";
-    } else if (ua.includes("macintosh")) {
-      device = "Mac";
-      os = "macOS";
-    }
-
-    if (ua.includes("chrome")) {
-      browser = "Chrome";
-    } else if (ua.includes("safari") && !ua.includes("chrome")) {
-      browser = "Safari";
-    } else if (ua.includes("firefox")) {
-      browser = "Firefox";
-    } else if (ua.includes("edg")) {
-      browser = "Edge";
-    }
-
-    return {
-      device,
-      os,
-      browser
-    };
+  if (ua.includes("iphone")) {
+    device = guessIphoneModel(ua);
+    os = "iOS";
+  } else if (ua.includes("ipad")) {
+    device = "iPad";
+    os = "iOS";
+  } else if (ua.includes("android")) {
+    device = guessAndroidModel(ua);
+    os = "Android";
+  } else if (ua.includes("windows")) {
+    device = "Windows PC";
+    os = "Windows";
+  } else if (ua.includes("macintosh")) {
+    device = "Mac";
+    os = "macOS";
   }
 
-  function guessIphoneModel(ua) {
-    if (ua.includes("iphone os 16")) return "iPhone 14系";
-    if (ua.includes("iphone os 15")) return "iPhone 13系";
-    if (ua.includes("iphone os 14")) return "iPhone 12系";
-    if (ua.includes("iphone os 13")) return "iPhone 11系";
-    return "iPhone端末";
+  if (ua.includes("chrome")) {
+    browser = "Chrome";
+  } else if (ua.includes("safari") && !ua.includes("chrome")) {
+    browser = "Safari";
+  } else if (ua.includes("firefox")) {
+    browser = "Firefox";
+  } else if (ua.includes("edg")) {
+    browser = "Edge";
   }
 
-  function guessAndroidModel(ua) {
-    const match = ua.match(/android.*build\/([a-z0-9\-]+)/i);
-    if (match && match[1]) {
-      return `Android (${match[1]})`;
+  return { device, os, browser };
+}
+
+function guessIphoneModel(ua) {
+  if (ua.includes("iphone os 16")) return "iPhone 14系";
+  if (ua.includes("iphone os 15")) return "iPhone 13系";
+  if (ua.includes("iphone os 14")) return "iPhone 12系";
+  if (ua.includes("iphone os 13")) return "iPhone 11系";
+  return "iPhone端末";
+}
+
+function guessAndroidModel(ua) {
+  const match = ua.match(/android.*build\/([a-z0-9\-]+)/i);
+  if (match && match[1]) {
+    return `Android (${match[1]})`;
+  }
+  return "Android端末";
+}
+
+// ログのリアルタイム取得とフィルタ表示
+db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
+  allLogs = [];
+  snapshot.forEach(doc => {
+    allLogs.push(doc.data());
+  });
+  filterAndDisplayLogs();
+});
+
+// フィルタ関連
+const searchTableId = document.getElementById("searchTableId");
+const searchDevice = document.getElementById("searchDevice");
+const searchOSBrowser = document.getElementById("searchOSBrowser");
+const searchStartDate = document.getElementById("searchStartDate");
+const searchEndDate = document.getElementById("searchEndDate");
+const clearFilters = document.getElementById("clearFilters");
+
+function filterAndDisplayLogs() {
+  const tableIdFilter = searchTableId.value.trim().toLowerCase();
+  const deviceFilter = searchDevice.value.trim().toLowerCase();
+  const osBrowserFilter = searchOSBrowser.value.trim().toLowerCase();
+  const startDateFilter = searchStartDate.value;
+  const endDateFilter = searchEndDate.value;
+
+  const tbody = document.querySelector("#usageLogsTable tbody");
+  if (!tbody) return;
+
+  tbody.innerHTML = "";
+
+  const usageMap = {};
+
+  allLogs.forEach(log => {
+    const key = `${log.table}_${log.device}`;
+    const time = new Date(log.timestamp);
+
+    if (!usageMap[key]) usageMap[key] = { table: log.table, device: log.device };
+
+    if (log.type === "enter") {
+      usageMap[key].start = time;
+    } else if (log.type === "exit") {
+      usageMap[key].end = time;
     }
-    return "Android端末";
-  }
+  });
 
-
-  let allLogs = []; // 全ログ保存用
-
-  // 検索フォームの各要素を取得
-  const searchTableId = document.getElementById("searchTableId");
-  const searchDevice = document.getElementById("searchDevice");
-  const searchOSBrowser = document.getElementById("searchOSBrowser");
-  const searchStartDate = document.getElementById("searchStartDate");
-  const searchEndDate = document.getElementById("searchEndDate");
-  const clearFilters = document.getElementById("clearFilters");
-
-  function filterAndDisplayLogs() {
-    const tableIdFilter = searchTableId.value.trim().toLowerCase();
-    const deviceFilter = searchDevice.value.trim().toLowerCase();
-    const osBrowserFilter = searchOSBrowser.value.trim().toLowerCase();
-    const startDateFilter = searchStartDate.value; // yyyy-mm-dd
-    const endDateFilter = searchEndDate.value; // yyyy-mm-dd
-
-    const tbody = document.querySelector("#usageLogsTable tbody");
-    tbody.innerHTML = "";
-
-    // table_deviceごとにまとめるロジックは元と同じ
-    const usageMap = {};
-
-    allLogs.forEach(log => {
-      const key = `${log.table}_${log.device}`;
-      const time = new Date(log.timestamp);
-
-      if (!usageMap[key]) usageMap[key] = { table: log.table, device: log.device };
-
-      if (log.type === "enter") {
-        usageMap[key].start = time;
-      } else if (log.type === "exit") {
-        usageMap[key].end = time;
+  Object.values(usageMap)
+    .filter(log => log.start && log.end)
+    .filter(log => {
+      if (tableIdFilter && !log.table.toLowerCase().includes(tableIdFilter)) return false;
+      if (deviceFilter) {
+        const deviceName = parseDeviceInfo(log.device).device.toLowerCase();
+        if (!deviceName.includes(deviceFilter)) return false;
       }
+      if (osBrowserFilter) {
+        const info = parseDeviceInfo(log.device);
+        const osBrowser = (info.os + " / " + info.browser).toLowerCase();
+        if (!osBrowser.includes(osBrowserFilter)) return false;
+      }
+      if (startDateFilter) {
+        const startDate = new Date(startDateFilter + "T00:00:00");
+        if (log.start < startDate) return false;
+      }
+      if (endDateFilter) {
+        const endDate = new Date(endDateFilter + "T23:59:59");
+        if (log.end > endDate) return false;
+      }
+      return true;
+    })
+    .forEach(log => {
+      const tr = document.createElement("tr");
+      const deviceInfo = parseDeviceInfo(log.device);
+      tr.innerHTML = `
+        <td>${log.table}</td>
+        <td>${deviceInfo.device}</td>
+        <td>${deviceInfo.os} / ${deviceInfo.browser}</td>
+        <td>${log.start.toLocaleString()}</td>
+        <td>${log.end.toLocaleString()}</td>
+      `;
+      tbody.appendChild(tr);
     });
+}
 
-    Object.values(usageMap)
-      .filter(log => log.start && log.end)
-      .filter(log => {
-        // テーブルIDフィルター
-        if (tableIdFilter && !log.table.toLowerCase().includes(tableIdFilter)) return false;
+clearFilters.addEventListener("click", () => {
+  searchTableId.value = "";
+  searchDevice.value = "";
+  searchOSBrowser.value = "";
+  searchStartDate.value = "";
+  searchEndDate.value = "";
+  filterAndDisplayLogs();
+});
 
-        // デバイスタイプ（機種）フィルター
-        if (deviceFilter) {
-          const deviceName = parseDeviceInfo(log.device).device.toLowerCase();
-          if (!deviceName.includes(deviceFilter)) return false;
-        }
+[searchTableId, searchDevice, searchOSBrowser, searchStartDate, searchEndDate].forEach(input => {
+  input.addEventListener("input", filterAndDisplayLogs);
+});
 
-        // OS/ブラウザフィルター
-        if (osBrowserFilter) {
-          const info = parseDeviceInfo(log.device);
-          const osBrowser = (info.os + " / " + info.browser).toLowerCase();
-          if (!osBrowser.includes(osBrowserFilter)) return false;
-        }
-
-        // 利用開始日付フィルター
-        if (startDateFilter) {
-          const startDate = new Date(startDateFilter + "T00:00:00");
-          if (log.start < startDate) return false;
-        }
-
-        // 利用終了日付フィルター
-        if (endDateFilter) {
-          const endDate = new Date(endDateFilter + "T23:59:59");
-          if (log.end > endDate) return false;
-        }
-
-        return true;
-      })
-      .forEach(log => {
-        const tr = document.createElement("tr");
-        const deviceInfo = parseDeviceInfo(log.device);
-        tr.innerHTML = `
-          <td>${log.table}</td>
-          <td>${deviceInfo.device}</td>
-          <td>${deviceInfo.os} / ${deviceInfo.browser}</td>
-          <td>${log.start.toLocaleString()}</td>
-          <td>${log.end.toLocaleString()}</td>
-        `;
-        tbody.appendChild(tr);
-      });
+// 初期化＆メニューボタン挙動
+window.onload = () => {
+  setInterval(updateTableDisplays, 60000);
+  const menuButton = document.querySelector(".menu-button");
+  const drawer = document.querySelector(".drawer");
+  if (menuButton && drawer) {
+    menuButton.addEventListener("click", () => {
+      drawer.classList.toggle("open");
+    });
   }
+};
 
-  clearFilters.addEventListener("click", () => {
-    searchTableId.value = "";
-    searchDevice.value = "";
-    searchOSBrowser.value = "";
-    searchStartDate.value = "";
-    searchEndDate.value = "";
-    filterAndDisplayLogs();
-  });
-
-  [searchTableId, searchDevice, searchOSBrowser, searchStartDate, searchEndDate].forEach(input => {
-    input.addEventListener("input", filterAndDisplayLogs);
-  });
-
-  // ログのリアルタイム取得と表示更新
-  db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
-    allLogs = [];
-    snapshot.forEach(doc => {
-      allLogs.push(doc.data());
-    });
-    filterAndDisplayLogs();
-  });
-
-    function updateTableDisplays() {
-   }
-
-    function countVisitors(snapshot) {
-      updateTableDisplays();
-    }
-
-    window.onload = () => {
-      db.collection("logs").onSnapshot(countVisitors);
-      setInterval(updateTableDisplays, 60000);
-
-      const menuButton = document.querySelector(".menu-button");
-      const drawer = document.querySelector(".drawer");
-      menuButton.addEventListener("click", () => {
-        drawer.classList.toggle("open");
-      });
-    };
-
+function updateTableDisplays() {
+  updateUsageTime();
+}
 </script>
+
 </head>
 <body>
    <header>
