--- a/practice.html
+++ b/practice.html
@@ -113,6 +113,19 @@
       background-color: #2c3e50;
     }
 
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 30px 20px;
+    }
+
+    h2 {
+      margin-top: 40px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
+    }
+
 
 
     h1 {
