--- a/practice.html
+++ b/practice.html
@@ -175,21 +175,25 @@
   </style>
 </head>
 <body>
-    <header>
-    <input type="checkbox" id="drawerCheckbox" class="drawer-hidden">
-    <label for="drawerCheckbox" class="drawer-toggle-label" aria-label="メニューを開く">
+  <header>
+    <div class="menu-button">
       <span></span>
       <span></span>
       <span></span>
-    </label>
-    <nav class="drawer-menu">
-      <ul>
-        <li><a href="index.html">ホーム</a></li>
-        <li><a href="map.html">店舗マップ</a></li>
-        <li><a href="histogram.html">混雑履歴</a></li>
-        <li><a href="table_management.html">テーブル管理</a></li>
-      </ul>
-    </nav>
+    </div>
+    <div class="header-bar">
+      <div class="header-title">　　　　　店内管理システム</div>
+      <div class="header-links">
+        <a href="#">マニュアル</a>
+        <a href="start.html">ログアウト</a>
+      </div>
+    </div>
+    <div class="drawer">
+      <a href="index.html">ホーム</a>
+      <a href="map.html">店内マップ</a>
+      <a href="histogram.html">混雑状況可視化</a>
+      <a href="admin.html">待ち管理</a>
+    </div>
   </header>
 
 
