--- a/table.html
+++ b/table.html
@@ -7,98 +7,127 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #e0f7fa, #ffffff);
-      padding: 20px;
+      font-family: 'Helvetica Neue', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      color: #2c3e50;
+      overflow-x: hidden;
     }
 
     header {
-  position: relative;
-  background-color: #00796b;
-  padding: 10px 20px;
-  color: white;
-  font-weight: bold;
-  user-select: none;
-}
+      background-color: #2c3e50;
+      color: white;
+      position: relative;
+      margin-bottom: 0;
+      padding-bottom: 0; 
+    }
 
-.drawer-hidden {
-  display: none;
-}
+        .header-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 20px;
+    }
 
-/* ハンバーガーアイコン */
-.drawer-toggle-label {
-  display: inline-block;
-  cursor: pointer;
-  width: 30px;
-  height: 24px;
-  position: relative;
-}
+    .header-title {
+      font-size: 1.5em;
+      font-weight: bold;
+    }
 
-.drawer-toggle-label span {
-  display: block;
-  height: 4px;
-  background: white;
-  margin-bottom: 5px;
-  border-radius: 2px;
-  transition: 0.3s;
-}
+    .header-links {
+      display: flex;
+      gap: 20px;
+    }
 
-/* ドロワーメニュー */
-.drawer-menu {
-  position: fixed;
-  top: 0;
-  left: -250px;
-  width: 220px;
-  height: 100%;
-  background: #004d40;
-  padding-top: 60px;
-  transition: left 0.3s ease;
-  z-index: 1000;
-}
+    .header-links a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+    }
 
-.drawer-menu ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
+    .header-links a:hover {
+      text-decoration: underline;
+    }
 
-.drawer-menu li {
-  padding: 15px 20px;
-}
+    .full-width-section {
+      width: 100vw;
+      position: relative;
+      left: 50%;
+      right: 50%;
+      margin-left: -50vw;
+      margin-right: -50vw;
 
-.drawer-menu li a {
-  color: white;
-  text-decoration: none;
-  font-weight: normal;
-  display: block;
-}
+      background: #e0f7da;
+      padding: 60px 0;
+      text-align: center;
+      margin-top: 0 !important; 
+    }
 
-.drawer-menu li a:hover {
-  background-color: #00695c;
-  border-radius: 4px;
-}
+        /* ハンバーガーメニュー */
+    .menu-button {
+      position: absolute;
+      left: 20px;
+      top: 12px;
+      width: 30px;
+      height: 24px;
+      cursor: pointer;
+      z-index: 1001;
+    }
 
-/* チェックボックスがチェックされたらドロワーを表示 */
-.drawer-hidden:checked ~ .drawer-menu {
-  left: 0;
-}
+    .menu-button span {
+      display: block;
+      height: 4px;
+      background: white;
+      margin: 5px 0;
+      transition: 0.4s;
+    }
 
-/* ハンバーガーアイコンのアニメーション */
-.drawer-hidden:checked + .drawer-toggle-label span:nth-child(1) {
-  transform: rotate(45deg);
-  top: 8px;
-  position: relative;
-}
+    .drawer {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      width: 250px;
+      height: 100%;
+      background-color: #34495e;
+      color: white;
+      transition: 0.3s;
+      z-index: 1000;
+      padding-top: 60px;
+    }
 
-.drawer-hidden:checked + .drawer-toggle-label span:nth-child(2) {
-  opacity: 0;
-}
+    .drawer.open {
+      left: 0;
+    }
 
-.drawer-hidden:checked + .drawer-toggle-label span:nth-child(3) {
-  transform: rotate(-45deg);
-  top: -8px;
-  position: relative;
-}
+    .drawer a {
+      display: block;
+      padding: 15px 20px;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      border-bottom: 1px solid #2c3e50;
+    }
+
+    .drawer a:hover {
+      background-color: #2c3e50;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 30px 20px;
+    }
+
+    h2 {
+      margin-top: 40px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
+    }
+
+
+
     h1 {
       text-align: center;
     }
@@ -146,21 +175,25 @@
   </style>
 </head>
 <body>
-    <header>
-    <input type="checkbox" id="drawerCheckbox" class="drawer-hidden">
-    <label for="drawerCheckbox" class="drawer-toggle-label" aria-label="メニューを開く">
+  <header>
+    <div class="menu-button">
       <span></span>
       <span></span>
       <span></span>
-    </label>
-    <nav class="drawer-menu">
-      <ul>
-        <li><a href="index.html">ホーム</a></li>
-        <li><a href="map.html">店舗マップ</a></li>
-        <li><a href="histogram.html">混雑履歴</a></li>
-        <li><a href="table_management.html">テーブル管理</a></li>
-      </ul>
-    </nav>
+    </div>
+    <div class="header-bar">
+      <div class="header-title">　　　　　店内管理システム</div>
+      <div class="header-links">
+        <a href="#">マニュアル</a>
+        <a href="start.html">ログアウト</a>
+      </div>
+    </div>
+    <div class="drawer">
+      <a href="index.html">ホーム</a>
+      <a href="map.html">店内マップ</a>
+      <a href="histogram.html">混雑状況可視化</a>
+      <a href="admin.html">待ち管理</a>
+    </div>
   </header>
 
 
@@ -463,6 +496,24 @@
     });
     filterAndDisplayLogs();
   });
+
+      function updateTableDisplays() {
+   }
+
+    function countVisitors(snapshot) {
+      updateTableDisplays();
+    }
+
+      window.onload = () => {
+      db.collection("logs").onSnapshot(countVisitors);
+      setInterval(updateTableDisplays, 60000);
+
+      const menuButton = document.querySelector(".menu-button");
+      const drawer = document.querySelector(".drawer");
+      menuButton.addEventListener("click", () => {
+        drawer.classList.toggle("open");
+      });
+    };
 
 </script>
 </body>
