--- a/practice.html
+++ b/practice.html
@@ -5,6 +5,7 @@
   <title>テーブル管理</title>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: 'Helvetica Neue', sans-serif;
@@ -181,6 +182,19 @@
 
     <h1>テーブル管理画面</h1>
 
+  <div style="padding: 20px; background: #f9f9f9;">
+  <h2>使用状況サマリー</h2>
+  <canvas id="summaryPieChart" width="400" height="200"></canvas>
+  <canvas id="summaryBarChart" width="400" height="200" style="margin-top: 40px;"></canvas>
+  <table id="usageStatsTable" border="1" style="margin-top: 40px; width: 100%; text-align: center;">
+    <thead>
+      <tr><th>テーブル</th><th>使用回数</th><th>累積使用時間（分）</th><th>平均滞在時間（分）</th></tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+  <button onclick="downloadCSV()">CSVダウンロード</button>
+</div>
+
 
   <div class="table-list">
     <h2>テーブル一覧</h2>
@@ -256,6 +270,119 @@
 
   // グローバル変数でテーブル状態を保持
   let tableStatus = {};
+
+    const logsRef = firebase.firestore().collection('logs');
+  const tableStats = {};
+
+  function formatMinutes(ms) {
+    return Math.round(ms / 60000);
+  }
+
+  function downloadCSV() {
+    let csv = "テーブル,使用回数,累積使用時間（分）,平均滞在時間（分）\n";
+    for (const table in tableStats) {
+      const stat = tableStats[table];
+      const avg = stat.count > 0 ? stat.total / stat.count : 0;
+      csv += `${table},${stat.count},${formatMinutes(stat.total)},${formatMinutes(avg)}\n`;
+    }
+    const blob = new Blob([csv], { type: 'text/csv' });
+    const a = document.createElement("a");
+    a.href = URL.createObjectURL(blob);
+    a.download = "usage_stats.csv";
+    a.click();
+  }
+
+  async function loadStats() {
+    const snapshot = await logsRef.orderBy('timestamp').get();
+    const logs = snapshot.docs.map(doc => doc.data());
+    const enterMap = {};
+
+    logs.forEach(log => {
+      const { table, timestamp, type, device } = log;
+      const key = table + '-' + device;
+
+      if (!tableStats[table]) tableStats[table] = { count: 0, total: 0 };
+
+      if (type === 'enter') {
+        enterMap[key] = timestamp;
+      } else if (type === 'exit' && enterMap[key]) {
+        const enterTime = new Date(enterMap[key]);
+        const exitTime = new Date(timestamp);
+        const duration = exitTime - enterTime;
+
+        if (duration > 0) {
+          tableStats[table].count++;
+          tableStats[table].total += duration;
+        }
+
+        delete enterMap[key];
+      }
+    });
+
+    drawCharts();
+    drawTable();
+  }
+
+  function drawCharts() {
+    const labels = Object.keys(tableStats);
+    const usageCounts = labels.map(t => tableStats[t].count);
+    const totalTimes = labels.map(t => formatMinutes(tableStats[t].total));
+    const avgTimes = labels.map(t => formatMinutes(tableStats[t].total / (tableStats[t].count || 1)));
+
+    new Chart(document.getElementById('summaryPieChart'), {
+      type: 'pie',
+      data: {
+        labels: labels,
+        datasets: [{
+          label: '使用回数',
+          data: usageCounts,
+          backgroundColor: labels.map((_, i) => `hsl(${i * 60}, 70%, 60%)`)
+        }]
+      }
+    });
+
+    new Chart(document.getElementById('summaryBarChart'), {
+      type: 'bar',
+      data: {
+        labels: labels,
+        datasets: [
+          {
+            label: '使用回数',
+            data: usageCounts,
+            backgroundColor: 'rgba(75, 192, 192, 0.6)'
+          },
+          {
+            label: '平均滞在時間（分）',
+            data: avgTimes,
+            backgroundColor: 'rgba(255, 159, 64, 0.6)'
+          }
+        ]
+      },
+      options: {
+        scales: {
+          y: { beginAtZero: true }
+        }
+      }
+    });
+  }
+
+  function drawTable() {
+    const tbody = document.querySelector('#usageStatsTable tbody');
+    tbody.innerHTML = '';
+    for (const table in tableStats) {
+      const stat = tableStats[table];
+      const avg = stat.count > 0 ? stat.total / stat.count : 0;
+      const row = `<tr>
+        <td>${table}</td>
+        <td>${stat.count}</td>
+        <td>${formatMinutes(stat.total)}</td>
+        <td>${formatMinutes(avg)}</td>
+      </tr>`;
+      tbody.innerHTML += row;
+    }
+  }
+
+  loadStats();
 
 
   db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
