--- a/practice.html
+++ b/practice.html
@@ -278,15 +278,13 @@
     </table>
   </div>
 
-
-
   <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 import {
-  getFirestore, collection, getDocs
+  getFirestore, collection, getDocs, onSnapshot, query, orderBy
 } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-    const firebaseConfig = {
+  const firebaseConfig = {
     apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
     authDomain: "qr-visitor-log.firebaseapp.com",
     projectId: "qr-visitor-log",
@@ -295,8 +293,9 @@ import {
     appId: "1:304250341939:web:b8d5b946590d1f852cf146"
   };
 
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+
 
   // グローバル変数でテーブル状態を保持
   let tableStatus = {};
@@ -430,7 +429,7 @@ drawCharts();
 
 
 
-  db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
+onSnapshot(query(collection(db, "logs"), orderBy("timestamp")), snapshot => {
     tableStatus = {};
 
     snapshot.forEach(doc => {
