--- a/practice.html
+++ b/practice.html
@@ -281,7 +281,7 @@
   <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 import {
-  getFirestore, collection, getDocs, onSnapshot, query, orderBy
+  getFirestore, collection, getDocs
 } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
   const firebaseConfig = {
@@ -299,9 +299,6 @@ import {
 
   // グローバル変数でテーブル状態を保持
   let tableStatus = {};
-
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
 
 async function drawCharts() {
   const logsSnapshot = await getDocs(collection(db, "logs"));
