--- a/practice.html
+++ b/practice.html
@@ -279,40 +279,34 @@
   </div>
 
 
-  <script type="module">
+<script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 import {
   getFirestore, collection, getDocs
 } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-    authDomain: "qr-visitor-log.firebaseapp.com",
-    projectId: "qr-visitor-log",
-    storageBucket: "qr-visitor-log.appspot.com",
-    messagingSenderId: "304250341939",
-    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+  authDomain: "qr-visitor-log.firebaseapp.com",
+  projectId: "qr-visitor-log",
+  storageBucket: "qr-visitor-log.appspot.com",
+  messagingSenderId: "304250341939",
+  appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+};
 
-  const app = initializeApp(firebaseConfig);
-  firebase.initializeApp(firebaseConfig);
-  const db = getFirestore(app);
-
-
-  // グローバル変数でテーブル状態を保持
-  let tableStatus = {};
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
 
 async function drawCharts() {
   const logsSnapshot = await getDocs(collection(db, "logs"));
   const logs = logsSnapshot.docs.map(doc => doc.data());
 
-  const usageStatus = {};
   const usageCount = {};
   const usageTime = {};
-
   const tableStates = {};
   const entryTimes = {};
 
+  // タイムスタンプ順に並び替え
   logs.sort((a, b) => new Date(a.timestamp) - new Date(b.timestamp));
 
   logs.forEach(log => {
@@ -320,11 +314,8 @@ async function drawCharts() {
     const time = new Date(log.timestamp);
     const type = log.type;
 
-    if (!usageStatus[table]) {
-      usageStatus[table] = "vacant";
-      usageCount[table] = 0;
-      usageTime[table] = 0;
-    }
+    if (!usageCount[table]) usageCount[table] = 0;
+    if (!usageTime[table]) usageTime[table] = 0;
 
     if (type === "enter") {
       if (!entryTimes[table]) {
@@ -342,8 +333,13 @@ async function drawCharts() {
     }
   });
 
-  // Pie Chart 1: 全体の使用状況
-  const totalTables = Object.keys(usageStatus).length;
+  // Pie Chart 1: 全体の使用状況（修正済み）
+  const allTables = new Set([
+    ...Object.keys(usageCount),
+    ...Object.keys(usageTime),
+    ...Object.keys(tableStates)
+  ]);
+  const totalTables = allTables.size;
   const occupiedCount = Object.values(tableStates).filter(state => state === "occupied").length;
   const vacantCount = totalTables - occupiedCount;
 
@@ -389,7 +385,9 @@ async function drawCharts() {
   // Bar Chart: 使用回数＋平均使用時間
   const barLabels = Object.keys(usageCount);
   const countData = Object.values(usageCount);
-  const avgTimeData = barLabels.map(t => usageCount[t] > 0 ? usageTime[t] / usageCount[t] : 0);
+  const avgTimeData = barLabels.map(t =>
+    usageCount[t] > 0 ? usageTime[t] / usageCount[t] : 0
+  );
 
   new Chart(document.getElementById("barChart"), {
     type: "bar",
@@ -428,7 +426,7 @@ drawCharts();
 
 
 
-onSnapshot(query(collection(db, "logs"), orderBy("timestamp")), snapshot => {
+    onSnapshot(query(collection(db, "logs"), orderBy("timestamp")), snapshot => {
     tableStatus = {};
 
     snapshot.forEach(doc => {
@@ -539,128 +537,117 @@ onSnapshot(query(collection(db, "logs"), orderBy("timestamp")), snapshot => {
   }
 
 
-  let allLogs = []; // 全ログ保存用
+// --- フィルタ検索とリアルタイムログ取得部分 ---
 
-  // 検索フォームの各要素を取得
-  const searchTableId = document.getElementById("searchTableId");
-  const searchDevice = document.getElementById("searchDevice");
-  const searchOSBrowser = document.getElementById("searchOSBrowser");
-  const searchStartDate = document.getElementById("searchStartDate");
-  const searchEndDate = document.getElementById("searchEndDate");
-  const clearFilters = document.getElementById("clearFilters");
+let allLogs = []; // 全ログ保存用
 
-  function filterAndDisplayLogs() {
-    const tableIdFilter = searchTableId.value.trim().toLowerCase();
-    const deviceFilter = searchDevice.value.trim().toLowerCase();
-    const osBrowserFilter = searchOSBrowser.value.trim().toLowerCase();
-    const startDateFilter = searchStartDate.value; // yyyy-mm-dd
-    const endDateFilter = searchEndDate.value; // yyyy-mm-dd
+// 検索フォームの各要素を取得
+const searchTableId = document.getElementById("searchTableId");
+const searchDevice = document.getElementById("searchDevice");
+const searchOSBrowser = document.getElementById("searchOSBrowser");
+const searchStartDate = document.getElementById("searchStartDate");
+const searchEndDate = document.getElementById("searchEndDate");
+const clearFilters = document.getElementById("clearFilters");
 
-    const tbody = document.querySelector("#usageLogsTable tbody");
-    tbody.innerHTML = "";
+function filterAndDisplayLogs() {
+  const tableIdFilter = searchTableId.value.trim().toLowerCase();
+  const deviceFilter = searchDevice.value.trim().toLowerCase();
+  const osBrowserFilter = searchOSBrowser.value.trim().toLowerCase();
+  const startDateFilter = searchStartDate.value;
+  const endDateFilter = searchEndDate.value;
 
-    // table_deviceごとにまとめるロジックは元と同じ
-    const usageMap = {};
+  const tbody = document.querySelector("#usageLogsTable tbody");
+  tbody.innerHTML = "";
 
-    allLogs.forEach(log => {
-      const key = `${log.table}_${log.device}`;
-      const time = new Date(log.timestamp);
+  const usageMap = {};
 
-      if (!usageMap[key]) usageMap[key] = { table: log.table, device: log.device };
+  allLogs.forEach(log => {
+    const key = `${log.table}_${log.device}`;
+    const time = new Date(log.timestamp);
 
-      if (log.type === "enter") {
-        usageMap[key].start = time;
-      } else if (log.type === "exit") {
-        usageMap[key].end = time;
-      }
-    });
+    if (!usageMap[key]) usageMap[key] = { table: log.table, device: log.device };
 
-    Object.values(usageMap)
-      .filter(log => log.start && log.end)
-      .filter(log => {
-        // テーブルIDフィルター
-        if (tableIdFilter && !log.table.toLowerCase().includes(tableIdFilter)) return false;
-
-        // デバイスタイプ（機種）フィルター
-        if (deviceFilter) {
-          const deviceName = parseDeviceInfo(log.device).device.toLowerCase();
-          if (!deviceName.includes(deviceFilter)) return false;
-        }
-
-        // OS/ブラウザフィルター
-        if (osBrowserFilter) {
-          const info = parseDeviceInfo(log.device);
-          const osBrowser = (info.os + " / " + info.browser).toLowerCase();
-          if (!osBrowser.includes(osBrowserFilter)) return false;
-        }
-
-        // 利用開始日付フィルター
-        if (startDateFilter) {
-          const startDate = new Date(startDateFilter + "T00:00:00");
-          if (log.start < startDate) return false;
-        }
-
-        // 利用終了日付フィルター
-        if (endDateFilter) {
-          const endDate = new Date(endDateFilter + "T23:59:59");
-          if (log.end > endDate) return false;
-        }
-
-        return true;
-      })
-      .forEach(log => {
-        const tr = document.createElement("tr");
-        const deviceInfo = parseDeviceInfo(log.device);
-        tr.innerHTML = `
-          <td>${log.table}</td>
-          <td>${deviceInfo.device}</td>
-          <td>${deviceInfo.os} / ${deviceInfo.browser}</td>
-          <td>${log.start.toLocaleString()}</td>
-          <td>${log.end.toLocaleString()}</td>
-        `;
-        tbody.appendChild(tr);
-      });
-  }
-
-  clearFilters.addEventListener("click", () => {
-    searchTableId.value = "";
-    searchDevice.value = "";
-    searchOSBrowser.value = "";
-    searchStartDate.value = "";
-    searchEndDate.value = "";
-    filterAndDisplayLogs();
-  });
-
-  [searchTableId, searchDevice, searchOSBrowser, searchStartDate, searchEndDate].forEach(input => {
-    input.addEventListener("input", filterAndDisplayLogs);
-  });
-
-  // ログのリアルタイム取得と表示更新
-  db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
-    allLogs = [];
-    snapshot.forEach(doc => {
-      allLogs.push(doc.data());
-    });
-    filterAndDisplayLogs();
-  });
-
-      function updateTableDisplays() {
-   }
-
-    function countVisitors(snapshot) {
-      updateTableDisplays();
+    if (log.type === "enter") {
+      usageMap[key].start = time;
+    } else if (log.type === "exit") {
+      usageMap[key].end = time;
     }
+  });
 
-      window.onload = () => {
-      db.collection("logs").onSnapshot(countVisitors);
-      setInterval(updateTableDisplays, 60000);
+  Object.values(usageMap)
+    .filter(log => log.start && log.end)
+    .filter(log => {
+      if (tableIdFilter && !log.table.toLowerCase().includes(tableIdFilter)) return false;
 
-      const menuButton = document.querySelector(".menu-button");
-      const drawer = document.querySelector(".drawer");
-      menuButton.addEventListener("click", () => {
-        drawer.classList.toggle("open");
-      });
-    };
+      if (deviceFilter) {
+        const deviceName = parseDeviceInfo(log.device).device.toLowerCase();
+        if (!deviceName.includes(deviceFilter)) return false;
+      }
+
+      if (osBrowserFilter) {
+        const info = parseDeviceInfo(log.device);
+        const osBrowser = (info.os + " / " + info.browser).toLowerCase();
+        if (!osBrowser.includes(osBrowserFilter)) return false;
+      }
+
+      if (startDateFilter) {
+        const startDate = new Date(startDateFilter + "T00:00:00");
+        if (log.start < startDate) return false;
+      }
+
+      if (endDateFilter) {
+        const endDate = new Date(endDateFilter + "T23:59:59");
+        if (log.end > endDate) return false;
+      }
+
+      return true;
+    })
+    .forEach(log => {
+      const tr = document.createElement("tr");
+      const deviceInfo = parseDeviceInfo(log.device);
+      tr.innerHTML = `
+        <td>${log.table}</td>
+        <td>${deviceInfo.device}</td>
+        <td>${deviceInfo.os} / ${deviceInfo.browser}</td>
+        <td>${log.start.toLocaleString()}</td>
+        <td>${log.end.toLocaleString()}</td>
+      `;
+      tbody.appendChild(tr);
+    });
+}
+
+clearFilters.addEventListener("click", () => {
+  searchTableId.value = "";
+  searchDevice.value = "";
+  searchOSBrowser.value = "";
+  searchStartDate.value = "";
+  searchEndDate.value = "";
+  filterAndDisplayLogs();
+});
+
+[searchTableId, searchDevice, searchOSBrowser, searchStartDate, searchEndDate].forEach(input => {
+  input.addEventListener("input", filterAndDisplayLogs);
+});
+
+// Firebase v9モジュール構文でリアルタイムログ取得
+import { onSnapshot, query, orderBy, collection } from "firebase/firestore";
+
+onSnapshot(query(collection(db, "logs"), orderBy("timestamp")), snapshot => {
+  allLogs = [];
+  snapshot.forEach(doc => {
+    allLogs.push(doc.data());
+  });
+  filterAndDisplayLogs();
+});
+
+// ハンバーガーメニュー動作
+window.onload = () => {
+  const menuButton = document.querySelector(".menu-button");
+  const drawer = document.querySelector(".drawer");
+  menuButton.addEventListener("click", () => {
+    drawer.classList.toggle("open");
+  });
+};
 
 </script>
 </body>
