--- a/practice.html
+++ b/practice.html
@@ -630,7 +630,7 @@ clearFilters.addEventListener("click", () => {
 });
 
 // Firebase v9モジュール構文でリアルタイムログ取得
-import { onSnapshot, query, orderBy, collection } from "firebase/firestore";
+//import { onSnapshot, query, orderBy, collection } from "firebase/firestore";
 
 onSnapshot(query(collection(db, "logs"), orderBy("timestamp")), snapshot => {
   allLogs = [];
